Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17622

Moving an element in the model breaks the positioning of delegates in a ListView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 4.7.0, 4.7.1
    • None
    • Observed on Ubuntu 10.10 (Qt 4.7.0) and Ubuntu 11.04 (Qt 4.7.1).
    • e2b5681b1adab83555c7307b05f508d796a1152b

    Description

      When moving an element to the top of the model, the y positions of all the delegates in the ListView are incremented by the value of the 'spacing' property.

      The file attached is a minimal example that demonstrates the issue: every 1000 milliseconds, the timer moves the element at index 1 to index 0, and as a consequence the y coordinate of all the delegates is incremented by 10 (the value of the 'spacing).

      Note that the mirror operation (moving the element at index 0 to index 1) doesn't expose the issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            osomon Olivier Tilloy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes