Fix ListView elements y position getting wrongly updated when moving element to top of the list Task-number: QTBUG-17622 Reviewed-by: pending